Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38175

QML: XMLHTTPRequest: Missing method PATCH

XMLWordPrintable

      Attempt to use PATCH method results in error:
      Unsupported HTTP method type

      Most probably two files need attention:
      ./qtbase/src/network/access/qnetworkaccessmanager.cpp
      Few lines copy-paste from other methods.

      ./qtdeclarative/src/qml/qml/qqmlxmlhttprequest.cpp
      Oneliner, just allow the PATCH method.

      http://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol
      PATCH - Is used to apply partial modifications to a resource.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vkotov Valery Kotov
            ragnarkurm Ragnar Kurm
            Votes:
            3 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes